static/css/style.css
* {
  padding: 0;
  margin: 0;
}

html {
  font-family: verdana;
}

.wrapper {
  width: 900px;
  margin: 0 auto;
}

html {
  background: grey;
}

header {
  width: 100%;
  height: 100px;
  background: #5584C6;
}

header img {
  width: 200px;
}

nav {
  height: 50px;
  background: yellow;
}

.mainContent {
  width: 100%;
  float: left;
  min-height: 600px;
  background: #cccccc;
}

footer {
  float: left;
  width: 100%;
  height: 30px;
  line-height: 30px;
  background: green;
}

footer span {
  float: right;
  color: white;
  margin-right: 10px;
}

nav {
  width: 100%;
}

nav ul {
  list-style: none;
  float: right;
  padding: 10px;
  margin-top: 5px;
}

nav ul li {
  float: left;
}

nav ul li a {
  text-decoration: none;
  padding: 5px 15px;
  background: white;
}

nav ul li a:hover {
  background: green;
  color: white;
}

section {
  width: calc( 33.33% - 10px);
  height: 100px;
  float: left;
  box-sizing: border-box;
  margin: 5px;
}

@media print {
  section {
    border: 3px grey solid !important;
  }
}

@media (max-width: 900px) {
  header {
    background: red;
  }
}

@media (max-width: 600px) {
  header {
    background: green;
  }
  .wrapper {
    width: 100%;
  }
  section {
    width: 100%;
    float: none;
  }
}

@media (max-width: 400px) {
  header {
    background: blue;
  }
}

